--- a/css/facebox.css
+++ b/css/facebox.css
@@ -1,4 +1,4 @@
-#newsbox {
+.smallbox {
 
     /* overlay is hidden before loading */
     display:none;
@@ -15,14 +15,14 @@
     -webkit-border-radius:8px;
   }
 
-#newsbox div {
+.smallbox div {
     padding:10px;
     border:1px solid #3B5998;
     background-color:#fff;
     font-family:"lucida grande",tahoma,verdana,arial,sans-serif
 }
 
-#newsbox h2 {
+.smallbox h2 {
     margin:-11px;
     margin-bottom:0px;
     color:#fff;
